updated site files

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,18 +8,23 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+<header>    
 <h1>Andrea Erikson</h1>
-<div class="nav">
-    About 
-    Portfolio 
-    Contact 
-   </div>  
-<h2 class="clearfix">Portfolio</h2> 
+<ul class="nav">  
+ <li><a href="https://amerik22.github.io/Basic-Portfolio/index">About</a></li>
+ <li><a href="https://amerik22.github.io/Basic-Portfolio/portfolio">Portfolio</a> </li>
+ <li><a href="https://amerik22.github.io/Basic-Portfolio/contact">Contact</a></li>
+ </ul> 
+</header>
+
+ <section class="wrapper">
+<h2>Portfolio</h2> 
 
 Hangman <br>
 RPG Game <br>
 Trivia Game <br>
 Rutgers Info Widget <br>
 Rock Paper Scissors <br>
+</section>
 </body>
 </html>
