--- a/contact.html
+++ b/contact.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact</title>
+    <title>Contact Me</title>
     <link rel="stylesheet" href="assets/css/style.css">
     
 </head>
 <body>
+ <header>   
  <H1>Andrea Erikson</H1>   
- <div class="nav">
- About 
- Portfolio 
- Contact 
-</div>
+ <ul class="nav">  
+ <li><a href="https://amerik22.github.io/Basic-Portfolio/index">About</a></li>
+ <li><a href="https://amerik22.github.io/Basic-Portfolio/portfolio">Portfolio</a> </li>
+ <li><a href="https://amerik22.github.io/Basic-Portfolio/contact">Contact</a></li>
+ </ul> 
+ </header>
 
- <h2 class="clearfix">Contact</h2>
+
+<section class="wrapper">
+ <h2>Contact</h2>
 
  <form>
     Name<br>
@@ -24,8 +28,9 @@
    Email <br>
    <input type="text" placeholder="example@gmail.com"><br>
    Message<br> 
-   <input type="text"> <br>
+   <input type="textarea"> <br>
    <button>Submit</button>
  </form>
+ </section>
 </body>
 </html>
