--- a/index.html
+++ b/index.html
@@ -11,26 +11,29 @@
 </head>
 
 <body>
+<!---Start of header---->
 <header>
  <H1>Andrea Erikson</H1> 
- <div class="nav">  
- <a href="#">About</a>
- <a href="#">Portfolio</a> 
- <a href="#">Contact</a>
- </div> 
+ <ul class="nav">  
+ <li><a href="https://amerik22.github.io/Basic-Portfolio/index">About</a></li>
+ <li><a href="https://amerik22.github.io/Basic-Portfolio/portfolio">Portfolio</a> </li>
+ <li><a href="https://amerik22.github.io/Basic-Portfolio/contact">Contact</a></li>
+ </ul> 
 </header>
+<!--End of header-->
 
-<section>
+<!--Start of main section-->
+<section class="wrapper">
 <h2>About Me</h2>
 
-<div>
- <p>I am orginally from the Chicago, IL area. I have been </p>
+<div class="image">
+        <img src="assets/images/about_me.jpg">   
+</div>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed rutrum imperdiet urna, finibus viverra massa ornare ut. Fusce venenatis aliquam nulla, ac fringilla eros ornare 
-        non. Praesent sollicitudin mi pretium arcu scelerisque scelerisque. Maecenas convallis rhoncus lacus, et auctor sapien accumsan et. In facilisis orci nunc, eleifend pretium 
-        lectus fringilla quis. Suspendisse maximus sed lorem in congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer 
-        imperdiet dui lectus, sagittis scelerisque nulla rutrum at. Nulla urna erat, porttitor sagittis porttitor nonel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-        Nunc ut sapien mi</p>
+    <p>I am orginally from the Chicago, IL area and moved to Denver in 2015.</p>
+
+    <p>I have worked in marketing for the past 10 years. In my last two positions I have had the chance to learn basic HTML coding for websites and emails. I found I really enjoyed working in the code. As I found myself getting bored with marketing jobs, I have decided to jump in and try my hand at more advanced coding and web development.</p>
+</section> <!--End of main section-->
 </div>
 </section>
 </body>
