--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact Me</title>
+    <title>Contact me</title>
     <link rel="stylesheet" href="assets/css/style.css">
     
 </head>
@@ -28,9 +28,14 @@
    Email <br>
    <input type="text" placeholder="example@gmail.com"><br>
    Message<br> 
-   <input type="textarea"> <br>
-   <button>Submit</button>
+   <textarea name="message" rows="10" cols="30"></textarea><br>
+   <button>Submit</button><br>
  </form>
  </section>
+
+ <footer>
+    copyright &copy; 2018 Andrea Erikson
+</footer>
+
 </body>
 </html>
