--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Andrea Erikson Portfolio </title>
+    <title>About me </title>
 
     <link rel="stylesheet" href="assets/css/style.css">
+    
 
 </head>
 
@@ -27,14 +28,26 @@
 <h2>About Me</h2>
 
 <div class="image">
-        <img src="assets/images/about_me.jpg">   
+<img src="assets/images/about_me.jpg">
 </div>
+    <div class="about">
+    <p>  I am orginally from the Chicago area and moved to Denver in 2015. I have been working in marketing for over 10 years. 
+       In more recent postions I have gotten the chance to learn basic HTML for editing webpages and emails. I found that the most enjoyable part of my day was when I was coding.
+       So I have decided to deepen my knowledge and change my career path towards web development.  </p>
 
-    <p>I am orginally from the Chicago, IL area and moved to Denver in 2015.</p>
+    <p>What draws me to web development is the opprtunity to have a career where I can be a forever learner. Getting the chance to learn everyday 
+     makes for a fulfuling and long career. I also enjoy that a large part of the job is problem solving. 
+     There is nothing more exciting when you see your code come to life!  </p>
 
-    <p>I have worked in marketing for the past 10 years. In my last two positions I have had the chance to learn basic HTML coding for websites and emails. I found I really enjoyed working in the code. As I found myself getting bored with marketing jobs, I have decided to jump in and try my hand at more advanced coding and web development.</p>
-</section> <!--End of main section-->
-</div>
+     <p>In my spare time I love to hike, check out live music, binge shows on netflix, and cook, eat and drink all the yummy things.</p>
+    </div>
 </section>
+ 
+<!--End of main section-->
+
+<footer>
+    copyright &copy; 2018 Andrea Erikson
+</footer>
+
 </body>
 </html>
