--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio</title>
+    <title>My portfolio</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -19,12 +19,24 @@
 
  <section class="wrapper">
 <h2>Portfolio</h2> 
+<div class="projects">
+<img src="https://via.placeholder.com/150x150">
+<img src="https://via.placeholder.com/150x150">
+<img src="https://via.placeholder.com/150x150">
+<img src="https://via.placeholder.com/150x150">
+<img src="https://via.placeholder.com/150x150">
+</div>
 
-Hangman <br>
-RPG Game <br>
-Trivia Game <br>
-Rutgers Info Widget <br>
-Rock Paper Scissors <br>
+<div class="title-1">Hangman</div>
+<div class="title-2">RPG Game </div>
+<div class="title-3">Trivia Game </div>
+<div class="title-4">Rutgers Info Widget </div>
+<div class="title-5">Rock Paper Scissors </div>
 </section>
+
+<footer>
+    copyright &copy; 2018 Andrea Erikson
+</footer>
+
 </body>
 </html>
