upload correct files

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,19 +19,24 @@
 
  <section class="wrapper">
 <h2>Portfolio</h2> 
+
 <div class="projects">
-<img src="https://via.placeholder.com/150x150">
-<img src="https://via.placeholder.com/150x150">
-<img src="https://via.placeholder.com/150x150">
-<img src="https://via.placeholder.com/150x150">
-<img src="https://via.placeholder.com/150x150">
+<img class="project-1" src="https://via.placeholder.com/200x200">
+<img class="project-2" src="https://via.placeholder.com/200x200">
+</div>
+<div class="projects">
+<img class="project-3" src="https://via.placeholder.com/200x200">
+<img class="projects project-4" src="https://via.placeholder.com/200x200">
+</div>
+<div class="projects">
+<img  class="projects project-5" src="https://via.placeholder.com/200x200">
 </div>
 
-<div class="title-1">Hangman</div>
-<div class="title-2">RPG Game </div>
-<div class="title-3">Trivia Game </div>
-<div class="title-4">Rutgers Info Widget </div>
-<div class="title-5">Rock Paper Scissors </div>
+<div class="title title-1">Hangman</div>
+<div class="title title-2">RPG Game </div>
+<div class="title title-3">Trivia Game </div>
+<div class="title title-4">Rutgers Info Widget </div>
+<div class="title title-5">Rock Paper Scissors </div>
 </section>
 
 <footer>
