--- a/contact.html
+++ b/contact.html
@@ -24,11 +24,11 @@
 
  <form>
     Name<br>
-    <input type="text" placeholder="John Smith"><br>
+    <input type="text" placeholder="John Smith" size="125"><br>
    Email <br>
-   <input type="text" placeholder="example@gmail.com"><br>
+   <input type="text" placeholder="example@gmail.com" size="125"><br>
    Message<br> 
-   <textarea name="message" rows="10" cols="30"></textarea><br>
+   <textarea name="message" rows="10" cols="126"></textarea><br>
    <button>Submit</button><br>
  </form>
  </section>
